Archive2/89/f75fdde5436ec0/output
main.cpp:22:23: error: invalid operands to binary expression ('outer<int>::inner<float>' and 'outer<int>::inner<float>')
    std::cout << (oi1 == oi2) << std::endl;
                  ~~~ ^  ~~~
main.cpp:17:6: note: candidate template ignored: couldn't infer template argument 'T'
bool operator==(typename outer<T>::template inner<U> const &lhs, typename outer<T>::template inner<U> const &rhs)
     ^
1 error generated.
